# tidal-language-server

./: .gitignore  CHANGELOG.md  README.md  tidal-language-server.cabal  tidal-ls.cabal
app/: Main.hs
src/: Log.hs  TidalDoc.hs
src/Tidal/: Documentation.hs  Log.hs
src/Tidal/LSP/: Document.hs  Handlers.hs  Server.hs
src/Tidal/LSP/Handlers/: Completion.hs  Hover.hs
test/: TestMe.hs
