cabal-version:   3.0
name:            tidal-ls
version:         0.1.0.0
--               synopsis:
--               description:
license:         MIT
license-file:    LICENSE
author:          Bss
--               maintainer:
--               copyright:
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md
--               extra-source-files:

common warnings
    ghc-options:
       -Wall

library
    import:
        warnings
    exposed-modules:  
        Tidal.LSP.Server
      , TidalDoc
      , Log
    build-depends:  
        base >=4.8 && <5
      , lsp >=2.7.0.1 && <3
      , lsp-types >=2.3.0.1 && <3
      , text >=2.0.2 && <3
      , haskell-src-exts >=1.23.1 && <3
      , filepath >=1.5.4.0 && <2
      , directory >=1.3.9.0 && <2
      , stm
      , fuzzyfind
      , lens
      , time
      , exceptions
    hs-source-dirs:
       src
    default-language:
       Haskell2010

executable tidal-ls
    import:
       warnings
    main-is:
       Main.hs
    build-depends:
        base >=4.8 && <5
      , tidal-ls
      , lsp >=2.7.0.1 && <3
      , lsp-types >=2.3.0.1 && <3
      , text >=2.0.2 && <3
      , containers
      , stm
      , directory
      , lens
      , fuzzyfind
      , exceptions
    hs-source-dirs:
       app
    default-language:
       Haskell2010

test-suite tidal-ls-test
    import:
       warnings
    default-language:
       Haskell2010
    type:
       exitcode-stdio-1.0
    hs-source-dirs:
       test
    main-is:
       Main.hs
    build-depends:
        base ^>=4.17.2.1
      , tidal-ls
      , text
      , haddock-library ^>=1.11.0
      , haskell-src-exts
      , filepath
