cabal-version:   3.0
name:            tidal-ls
version:         0.1.0.0
--               synopsis:
--               description:
license:         MIT
license-file:    LICENSE
author:          Bss
--               maintainer:
--               copyright:
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md
--               extra-source-files:

common warnings
    ghc-options:
       -Wall

library
    import:
        warnings
    exposed-modules:  
        TidalDoc
      , Log
    build-depends:  
        base >=4.8 && <5
      , text                                   
      , haskell-src-exts                       
      , filepath
      , directory
      , stm
      , fuzzyfind
      , lsp
      , lsp-types
      , time
    hs-source-dirs:
       src
    default-language:
       Haskell2010

executable tidal-ls
    import:
       warnings
    main-is:
       Main.hs
    build-depends:
        base ^>=4.17.2.1
      , tidal-ls
      , lsp
      , lsp-types
      , text
      , containers
      , stm
      , directory
      , lens
      , fuzzyfind
    hs-source-dirs:
       app
    default-language:
       Haskell2010

test-suite tidal-ls-test
    import:
       warnings
    default-language:
       Haskell2010
    type:
       exitcode-stdio-1.0
    hs-source-dirs:
       test
    main-is:
       Main.hs
    build-depends:
        base ^>=4.17.2.1
      , tidal-ls
      , text
      , haddock-library ^>=1.11.0
      , haskell-src-exts
      , filepath

